2024-06-03  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (create_bundles): add argument
        "include.only.re" and remove unused "dir.list"

2024-05-28  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add 'tinytest'

        * inst/tinytest/test_sync.R: add tests

        * R/gitsync.R (pull_from_bundles): fix messages;
        add arguments 'bundle.pattern' and 'ignore.case'
        for selecting bundles

2023-06-20  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (pull_from_bundles): try to get
        branch name from bundle

2023-06-19  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (pull_from_bundles): no longer use
        branches when cloning
        (git_bundle_clone): normalize bundle path

        * NAMESPACE: export "pull_from_bundles"

        * R/gitsync.R (pull_from_bundles): add argument
        'if.not.exists', with default 'skip'

2023-06-16  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R: fix paths; remove instance of setwd()

        * .Rbuildignore: fix regular expressions

2023-06-15  Enrico Schumann  <es@enricoschumann.net>

        * initial version: sketches of functions for
        syncing directories and subdirectories with git